--- a/Campeonatos/Views/Shared/_Layout.cshtml.css
+++ b/Campeonatos/Views/Shared/_Layout.cshtml.css
@@ -31,18 +31,32 @@ a {
 }
 
 .box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+    box-shadow: 0 .0rem .0rem rgba(0, 0, 0, .0);
 }
-
 button.accept-policy {
   font-size: 1rem;
   line-height: inherit;
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    border-top: 1px solid #a600e2;
+    background-color: #000000;
+    white-space: normal;
+    line-height: 20px;
+}
+.offcanvas {
+    bottom: 0;
+    z-index: 1045;
+    width: 900px;
+    display: flex;
+    flex-direction: column;
+    max-width: 100%;
+    visibility: hidden;
+    background-color: #fff;
+    background-clip: padding-box;
+    outline: 0;
+    transition: transform 0.3s ease-in-out;
 }
